# tiny-mcp

./: .gitignore  README.md  pyproject.toml
tiny_mcp_cli/: __init__.py  main.py
tiny_mcp_cli/tools/: get_files_tool.py
